force-app/main/default/objects/BLN_WorldpayData__c/BLN_WorldpayData__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Worldpay Data</label>
</CustomObject>