force-app/main/default/objects/BLN_WorldpayData__c/fields/BLN_AuthorizationToken__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorizationToken__c</fullName>
    <description>To store basic auth token for worldpay integration. use the below code to generate for production.


String myString = username+&apos;:&apos;+password; 
Blob myBlob = Blob.valueof(myString);
String base64EncryptedString = EncodingUtil.base64Encode(myBlob);
System.debug(base64EncryptedString);</description>
    <label>AuthorizationToken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>