force-app/main/default/objects/BLN_WorldpayData__c/fields/BLN_AuthorizeAPIendpoint__c.field-meta.xml
<CustomField>
    <fullName>BLN_AuthorizeAPIendpoint__c</fullName>
    <label>AuthorizeAPIendpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>