force-app/main/default/objects/BLN_WorldpayData__c/fields/BLN_Content_Type_Authorize__c.field-meta.xml
<CustomField>
    <fullName>BLN_Content_Type_Authorize__c</fullName>
    <description>Content type for authorize api call.</description>
    <label>Content Type Authorize</label>
    <length>100</length>
    <type>Text</type>
</CustomField>