force-app/main/default/objects/BLN_WorldpayData__c/fields/BLN_Content_Type_Token__c.field-meta.xml
<CustomField>
    <fullName>BLN_Content_Type_Token__c</fullName>
    <description>To store the content type in token API.</description>
    <label>Content Type Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>