force-app/main/default/objects/BLN_WorldpayData__c/fields/BLN_TokenAPIendpoint__c.field-meta.xml
<CustomField>
    <fullName>BLN_TokenAPIendpoint__c</fullName>
    <description>Endpoint for token endpoint</description>
    <label>TokenAPIendpoint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>